...
    Scaffold(
        modifier = modifier
            .fillMaxSize()
            .nestedScroll(scrollBehavior.nestedScrollConnection),
        topBar = {
            TopAppBar(
                title = { Text("Favoriten") },
                modifier = Modifier
                    .statusBarsPadding()
                    .testTag("fav_appbar"),
                scrollBehavior = scrollBehavior,
            )
        },
...
